# tufureOS

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.json  docker-compose.yml  main.py  monitor.py  optimize.py  paper_trade.py  requirements.txt  strategy_example.py
.github/workflows/: open-code-review.yml  vibeguard.yml
backtest/: engine.py  run_backtest.py
backtest/reports/: hybrid_20260421_010506.json  mcts_20260421_010029.json  mcts_20260421_010506.json  mean_reversion_20260421_010029.json  momentum_20260421_010506.json
connectors/: __init__.py  binance.py  executor.py  polymarket.py
deployment/: Dockerfile  cron.sh  prometheus.yml  trading-bot.service  tufureos.service
mcts-engine/: Cargo.toml
mcts-engine/src/: evaluation.rs  game_tree.rs  lib.rs  mcts.rs  python.rs  types.rs
src/: __init__.py  alerts.py  bot.py  doctor.py  events.py  recovery.py  state_machine.py
strategies/: __init__.py  mcts_strategy.py  mean_reversion.py
tests/: test_backtest.py  test_connectors.py  test_doctor.py  test_state_machine.py  test_strategies.py
