[package]
name = "mcts-trader"
version = "0.1.0"
edition = "2021"
authors = ["jacquesmyo <https://github.com/jacquesmyo>"]
description = "Monte Carlo Tree Search trading engine with PyO3 Python integration"
license = "MIT"
repository = "https://github.com/jacquesmyo/mcts-trading-engine"

[lib]
name = "mcts_trader"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mcts-trader-cli"
path = "src/bin/cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
parking_lot = "0.12"
statrs = "0.16"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
tracing = "0.1"
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["python"]
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = true

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "mcts_benchmark"
harness = false
